Changelog for DBIx::DBStag

Version 0.01
============

2003-04-20      - Initial Release

Version 0.02
============

2004-04-01      - Addition of Templates
                - Use of double underscore to force columns into table


Version 0.03
============

2004-04-02      - Problem with 0.02 distribution (accidentally included blib)

Version 0.04
============

2004-07-15      - Fixed storenode() so that it works with databases
                  that use the primary_key="id" convention (eg GO DB)
                - added code to deal with <dbstag_mapping> in storenode
                - DBStag now used for loading data into GO DB
                  (http://www.godatabase.org)

Version 0.05
============

2004-10-01      - Added switches for caching and bulkloading

Version 0.06
============

2004-10-29      - Efficiency improvements

Version 0.07
============

2004-02-09      - [cjm] added cache option to storenode.pl
                -       escapes tabs and newlines with -rows switch