@@ -1,0 +1,40 @@
+#!/usr/local/bin/perl
+
+# cjm@fruitfly.org
+
+use strict;
+use Carp;
+use DBIx::DBStag;
+use Data::Stag qw(:all);
+use Data::Dumper;
+use Getopt::Long;
+
+my $h = {};
+
+my $dbname = '';
+my $connect;
+my $term;
+my @hist = ();
+
+GetOptions(
+           "dbname|d=s"=>\$dbname,
+           "connect|c"=>\$connect,
+          );
+
+my $match = shift;
+# parent dbh
+my $sdbh = 
+  DBIx::DBStag->new;
+
+my $resources = $sdbh->resources_list;
+foreach my $r (@$resources) {
+    next unless $r->{type} eq 'rdb';
+    my $name = $r->{name};
+    eval {
+        my $testdbh = DBIx::DBStag->connect($name);
+        $testdbh->disconnect;
+    };
+    my $ok = $@ ? 'FAIL' : 'PASS';
+    printf "%12s $ok\n", $name;
+}
+exit 0;
